--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <title>Testimonial Challenege</title>
 
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap" rel="stylesheet">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -22,10 +25,11 @@
     <div id="main-left">
       <div id="top">
         <div id="testimonial-1" class="grid-item">
+          <img id = "quote" src="images/bg-pattern-quotation.svg" alt="background quote">
           <div class="header">
             <img src="images/image-daniel.jpg" alt="daniel profile picture">
             <div class="header-txt">
-              <p>Daniel Clifford</p>
+              <p class = "name">Daniel Clifford</p>
               <p>Verified Graduate</p>
             </div>
           </div>
@@ -41,7 +45,7 @@
           <div class="header">
             <img src="images/image-jonathan.jpg" alt="jonathan profile picture">
             <div class="header-txt">
-              <p>Jonathan Walters</p>
+              <p class = "name">Jonathan Walters</p>
               <p>Verified Graduate</p>
             </div>
           </div>
@@ -59,7 +63,7 @@
           <div class="header">
             <img src="images/image-jeanette.jpg" alt="jeanette profile picture">
             <div class="header-txt">
-              <p>Jeanette Harmon</p>
+              <p class = "name">Jeanette Harmon</p>
               <p>Verified Graduate</p>
             </div>
           </div>
@@ -75,7 +79,7 @@
           <div class="header">
             <img src="images/image-patrick.jpg" alt="patrick profile picture">
             <div class="header-txt">
-              <p>Patrick Abrams</p>
+              <p class = "name">Patrick Abrams</p>
               <p>Verified Graduate</p>
             </div>
           </div>
@@ -94,7 +98,7 @@
       <div class="header">
         <img src="images/image-kira.jpg" alt="kira profile picture">
         <div class="header-txt">
-          <p>Kira Whittle</p>
+          <p class = "name">Kira Whittle</p>
           <p>Verified Graduate</p>
         </div>
       </div>
